<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NoteFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/app_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="2dp"
                            android:fontFamily="@font/google_sans_bold"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/my_notes"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

<!--                        <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                            android:id="@+id/language"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentEnd="true"-->
<!--                            android:layout_centerVertical="true"-->
<!--                            android:layout_marginStart="2dp"-->
<!--                            android:layout_marginTop="15dp"-->
<!--                            android:layout_marginEnd="2dp"-->
<!--                            android:paddingStart="8dp"-->
<!--                            android:paddingEnd="8dp"-->
<!--                            />-->
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="2dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            app:srcCompat="@drawable/baseline_language_24" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/relative">


                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/search"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="3"
                            android:background="@drawable/rounded_search"
                            android:drawableStart="@drawable/ic_round_search_24"
                            android:drawablePadding="5dp"
                            android:hint="@string/search_here"
                            android:imeOptions="actionSearch"
                            android:importantForAutofill="no"
                            android:inputType="textFilter"
                            android:paddingStart="18dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="18dp"
                            android:paddingBottom="5dp"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="5dp"
            android:transitionGroup="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/note_item_layout" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/no_data"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_no_data"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/add_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_margin="16dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/fab_btn_corner"
            android:backgroundTint="@color/black"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:orientation="horizontal">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/inner_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/add_note"
                android:src="@drawable/ic_round_add_24"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabSize="normal"
                app:tint="@color/white"
                app:useCompatPadding="false" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fab_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/google_sans_regular"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/add_note"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>